--- a/flexbox/1-styles.css
+++ b/flexbox/1-styles.css
@@ -311,6 +311,9 @@
   .section {
     padding: var(--section-padding);
   }
+  .section-services{
+    
+  }
   
   .section-header {
     text-align: var(--section-header-align);
