--- a/flexbox/1-styles.css
+++ b/flexbox/1-styles.css
@@ -312,7 +312,27 @@
     padding: var(--section-padding);
   }
   .section-services{
-    
+
+  }
+
+  .section-works{
+
+  }
+
+  .section-about-us{
+
+  }
+
+  .section-latest-news{
+
+  }
+
+  .section-testimonials{
+
+  }
+
+  .section-contact{
+
   }
   
   .section-header {
