Simplified services list

--- a/flexbox/3-styles.css
+++ b/flexbox/3-styles.css
@@ -399,7 +399,7 @@
 
   }
   /* Section SERVICES ============================= */
-  .row .section-services{
+  .section-services .row{
     flex-wrap: wrap;
   }
   /*** 4. CARD ***/
